fix: fixed clipping on overflow

--- a/assets/css/_freddy.scss
+++ b/assets/css/_freddy.scss
@@ -5,7 +5,7 @@
 
 #freddy {
   position: relative;
-  overflow: hidden;
+  overflow-x: clip;
   #stars {
     position: absolute;
     background-color: #191d21;
